# pypi-feedstocks

./: .gitmodules  .pre-commit-config.yaml  dprint.json  lint.py  main.py  pixi.toml  pyproject.toml  readme.in  readme.md  recipe.yaml  render.py  taskfile.dist.yaml  variants.yaml
.github/: renovate.json
.github/workflows/: _build_conda.yaml  release.yaml  tests.yaml  update.yaml
ci/: upload.bash
scripts/: common.py  new.py  render.py  update.py
wheel-to-conda/: readme.md
wheel-to-conda/python_wheel_to_conda_package/: __init__.py
