[build-system]
requires = ["flit-core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "pypi-feedstocks"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "click==8.2.0",
  "dprint-py==0.49.1.2",
  "httpx==0.28.1",
  "jmespath==1.0.1",
  "packaging==25.0",
  "pkginfo==1.12.1.2",
  "py-rattler==0.12.0",
  "pydantic==2.11.4",
  "pyyaml==6.0.2",
]

[tool.flit.module]
name = 'scripts'

[tool.ruff.lint]
extend-select = ['I']
