[build-system]
requires = ["flit-core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "pypi-feedstocks"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = "==3.12.12"
dependencies = [
  "click==8.3.0",
  "dprint-py==0.50.2.0",
  "httpx==0.28.1",
  "jmespath==1.0.1",
  "packaging==25.0",
  "pkginfo==1.12.1.2",
  "py-rattler==0.16.0",
  "pydantic==2.12.2",
  "pyyaml==6.0.3",
]

[tool.flit.module]
name = 'scripts'

[tool.ruff.lint]
extend-select = ['I']
